final update for now

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src='app.js'></script>
     <link rel="stylesheet" href="app.css">
-    <title>Some Title, Yo</title>
+    <title>Rick and Morty Ripoff!</title>
 </head>
 <body>
     <div class='nav-bar'>
@@ -14,7 +14,7 @@
         <nav>
             <a href="#">Docs</a>
             <a href="#">About Us</a>
-            <a href="#">Help Us</a>
+            <a class ='help-us' href="#">Help Us</a>
         </nav>
     </div>
     <header>
